--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Large video files (>100MB)
+src/assets/BGvideo-1.mp4
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
